https://issues.apache.org/jira/browse/HIVE-15848 hive.optimize.reducededuplication=false